--- a/plataformaGestionPredial/src/app/list/list.component.css
+++ b/plataformaGestionPredial/src/app/list/list.component.css
@@ -4,3 +4,10 @@ th{
 tr{
     cursor: pointer !important;
 }
+thead{
+    position: sticky !important;
+}
+/* img{
+    width: 50px !important;
+    height: 50px !important;
+} */
