--- a/plataformaGestionPredial/src/app/forms/forms.component.css
+++ b/plataformaGestionPredial/src/app/forms/forms.component.css
@@ -9,3 +9,17 @@ img {
   img:hover {
     box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
   }
+
+  .text-alert{
+    color:red;
+    /* margin-top: -5px; */
+  }
+  .divValidator{
+    /* display: inline-block; */
+    height: auto;
+  }
+
+  /* button:disabled{
+    cursor:not-allowed;
+    opacity:0.5
+  } */
