--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -2,7 +2,7 @@
 <div class="container pt-2">
   <form>
     <div class="mb-3 row">
-      <label for="table-complete-search" class="col-xs-3 col-sm-auto col-form-label">Search by name or DIIO:</label>
+      <label for="table-complete-search" class="col-xs-3 col-sm-auto col-form-label"><b>Search by name or DIIO:</b></label>
       <div class="col-xs-3 col-sm-auto">
         <input
           id="table-complete-search"
@@ -27,7 +27,7 @@
           <th scope="col" >Date Birth</th>
           <th scope="col" >Mother</th>
           <th scope="col" >Type</th>
-          <!-- <th scope="col" >Age</th> -->
+          <th scope="col" >Age</th>
           <!-- <th scope="col" >Actions</th> -->
           <!-- <th scope="col" >Color</th>
           <th scope="col" >State</th>
@@ -41,7 +41,7 @@
             <img
               width="50px"
               height="50px"
-              [src]="'http://localhost:4200/assets/imagenes/' + country.id+'.jpg'"
+              [src]="'../../assets/imagenes/' + country.id+'.jpg'"
               
             />
           </td>
@@ -53,7 +53,7 @@
           <td><ngb-highlight [result]=" country.dateBirth | date:'dd/MM/yyyy'" [term]="service.searchTerm"></ngb-highlight></td>
           <td><ngb-highlight [result]="country.mother" [term]="service.searchTerm"></ngb-highlight></td>
           <td><ngb-highlight [result]="country.type" [term]="service.searchTerm"></ngb-highlight></td>
-          <!-- <td>{{country.age}}</td> -->
+          <td>{{country.age}}</td>
           <!-- <td><i class="fa-solid fa-pen-to-square"></i></td> -->
         </tr>
       </tbody>
@@ -62,11 +62,11 @@
     <div class="d-flex justify-content-between p-2">
       <ngb-pagination [collectionSize]="(total$ | async)!" [(page)]="service.page" [pageSize]="service.pageSize">
 			</ngb-pagination>
-      <!-- {{items}} -->
+      Showing {{service.pageSize}} bovines of a total of {{(items$| async)?.length}}
       <select class="form-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
-        <option [ngValue]="5">5 items por página</option>
-        <option [ngValue]="10">10 items por página</option>
-        <option [ngValue]="15">15 items por página</option>
+        <option [ngValue]="5">5 items per page</option>
+        <option [ngValue]="10">10 items per page</option>
+        <option [ngValue]="15">15 items per page</option>
         <!-- <option [ngValue]="20">20 items por página</option> -->
       </select>
     </div>
