--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -60,12 +60,12 @@
         </a>
     </div>
 </div>
-<!-- <div *ngIf="menus[1].open" class="row submenu">
+<div *ngIf="menus[1].open" class="row submenu">
     <ul>
-        <li id="1"(click)="addClass(1)"><i class="fa-solid fa-syringe"></i>Medicaments</li>
+        <li id="1"(click)="addClass(1)"><i class="fa-solid fa-syringe"></i>Medicaments<span class="badge badge-secondary">PRO</span></li>
        <li id="2"(click)="addClass(2)"><i class="fa-solid fa-screwdriver-wrench"></i>Carpentry<span class="badge badge-secondary">PRO</span></li>
     </ul>
-</div> -->
+</div>
 
 <!-- MAQUINARIAS -->
 <div class="row menu" routerLink="/">
