--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -27,7 +27,7 @@
           <th scope="col" >Date Birth</th>
           <th scope="col" >Mother</th>
           <th scope="col" >Type</th>
-          <th scope="col" >Age</th>
+          <th scope="col" >Age<span class="badge" style="color: black;">PRO</span></th>
           <!-- <th scope="col" >Actions</th> -->
           <!-- <th scope="col" >Color</th>
           <th scope="col" >State</th>
@@ -41,7 +41,7 @@
             <img
               width="50px"
               height="50px"
-              [src]="'../../assets/imagenes/' + country.id+'.jpg'"
+              [src]="'http://localhost:8006/images/bovines/' + country.name"
               
             />
           </td>
@@ -51,7 +51,7 @@
           <td><ngb-highlight [result]="country.diio" [term]="service.searchTerm"></ngb-highlight></td>
           <td><ngb-highlight [result]=" country.datePlacement!=null?(country.datePlacement | date:'dd/MM/yyyy'):'No aplica'" [term]="service.searchTerm"></ngb-highlight></td>
           <td><ngb-highlight [result]=" country.dateBirth | date:'dd/MM/yyyy'" [term]="service.searchTerm"></ngb-highlight></td>
-          <td><ngb-highlight [result]="country.mother" [term]="service.searchTerm"></ngb-highlight></td>
+          <td><ngb-highlight style="cursor: pointer;" [result]="country.mother" [term]="service.searchTerm"></ngb-highlight></td>
           <td><ngb-highlight [result]="country.type" [term]="service.searchTerm"></ngb-highlight></td>
           <td>{{country.age}}</td>
           <!-- <td><i class="fa-solid fa-pen-to-square"></i></td> -->
