--- a/plataformaGestionPredial/src/app/login/login.component.html
+++ b/plataformaGestionPredial/src/app/login/login.component.html
@@ -10,22 +10,29 @@
                 <form id="form" method="post" >
                     <div class="form-group mb-2">
                         <label for="username">Email</label>
-                        <input type="email" class="form-control" id="username" name="username" required placeholder="ej: usuario@correo.com">
+                        <input type="email" class="form-control" id="username" name="username" required placeholder="eg: user@correo.com">
                     </div>
                     <div class="form-group mb-2">
-                        <label for="password">Contraseña</label>
+                        <label for="password">Password</label>
                         <input type="password" class="form-control" id="password" name="password" required placeholder="ej: 123456">
                         <!-- <span class="small">Entre 5 a 10 carácteres alfanuméricos</span> -->
                     </div>
                     <div class="form-group" style="text-align: center">
-                        <button class="btn btn-primary" (click)="login($event);">Ingresar</button>
+                        <button class="btn btn-primary" (click)="action($event);"><span *ngIf="loading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>{{textButton}}</button>
                         <br><br>
-                        <span>¿No tiene cuenta?  </span>
-                        <a href="" routerLink="/register">Cree su cuenta aquí</a>
+                        <div *ngIf="uri=='login'">
+                            <span>does not have an account?  </span>
+                            <a href="/register" routerLink="/register">Create your account here</a>
+                        </div>
+                        <div *ngIf="uri=='register'">
+                            <span>have an account?  </span>
+                            <a href="/login" routerLink="/login">Log in here</a>
+                        </div>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
+<!-- <app-footer></app-footer> -->
 </div>
