--- a/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
+++ b/plataformaGestionPredial/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
         <th scope="col">#</th>
         <th scope="col">Name</th>
         <th scope="col">Description</th>
-        <th scope="col">Type</th>
+        <!-- <th scope="col">Type</th> -->
         </tr>
         </thead>
         <tbody>
@@ -14,7 +14,7 @@
             <td>{{i+1}}</td>
             <td>{{register.name}}</td>
             <td>{{register.description}}</td>
-            <td>{{register.type}}</td>
+            <!-- <td>{{register.type}}</td> -->
             <!-- <td>5</td> -->
             <!-- <td><fa-icon title="Editar" [routerLink]="['/editar_condicion/',register.id]" class="btnEdit" [icon]="faEdit"></fa-icon></td> -->
           </tr>
