--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -41,7 +41,7 @@
             <img
               width="50px"
               height="50px"
-              [src]="'http://localhost:8006/images/bovines/' + country.name"
+              [src]="'http://localhost:8006/images/bovines/' + country.id"
               
             />
           </td>
