--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -53,7 +53,7 @@
           <td><ngb-highlight [result]=" country.dateBirth | date:'dd/MM/yyyy'" [term]="service.searchTerm"></ngb-highlight></td>
           <td><ngb-highlight style="cursor: pointer;" [result]="country.mother" [term]="service.searchTerm"></ngb-highlight></td>
           <td><ngb-highlight [result]="country.type" [term]="service.searchTerm"></ngb-highlight></td>
-          <td>{{country.age}}</td>
+          <!-- <td>{{country.age}}</td> -->
           <!-- <td><i class="fa-solid fa-pen-to-square"></i></td> -->
         </tr>
       </tbody>
