--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -27,7 +27,7 @@
           <th scope="col" >Date Birth</th>
           <th scope="col" >Mother</th>
           <th scope="col" >Type</th>
-          <th scope="col" >Age<span class="badge" style="color: black;">PRO</span></th>
+          <!-- <th scope="col" >Age<span class="badge" style="color: black;">PRO</span></th> -->
           <!-- <th scope="col" >Actions</th> -->
           <!-- <th scope="col" >Color</th>
           <th scope="col" >State</th>
