versión basic ok

--- a/plataformaGestionPredial/src/app/footer/footer.component.html
+++ b/plataformaGestionPredial/src/app/footer/footer.component.html
@@ -1,1 +1,1 @@
-<div class="body"><p>Plataforma de gestión predial ® . Versión: <span class="badge badge-secondary">DEMO</span> </p></div>
+<div class="body"><p>Plataforma de gestión predial ® . Version: <span class="badge badge-secondary">BASIC</span> </p></div>
