--- a/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
+++ b/plataformaGestionPredial/src/app/sidebar/sidebar.component.html
@@ -29,12 +29,12 @@
 </div>
 
 <!-- DOCUMENTOS -->
-<div class="row menu" routerLink="/documents">
+<div class="row menu" routerLink="/">
     <div class="col-3">
         <i class="bi bi-files"></i>
     </div>
     <div class="col-9">
-        <a class="nav-link" >Documents</a>
+        <a class="nav-link" >Documents<span class="badge badge-primary">PRO</span></a>
     </div>
 </div>
 
