--- a/plataformaGestionPredial/src/app/forms/forms.component.html
+++ b/plataformaGestionPredial/src/app/forms/forms.component.html
@@ -5,7 +5,14 @@
                 <h3>{{configurations.title}}</h3>
             </div>
             <div class="card-body">
-                <p>* : field required</p>
+                <div class="row">
+                    <div class="col-10">
+                        <p>* : field required</p>
+                    </div>
+                    <div class="col-2" style="float: right; cursor: pointer;">
+                        <span (click)="goBack();"> ← go back</span>
+                    </div>    
+                </div>
                 <form id="form" #f="ngForm" (ngSubmit)="inputFunction()">
                     <ng-container *ngFor="let field of fields; let i = index">
                         <div *ngIf="field.type=='password'" class="form-group mb-2">
