--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -1,97 +1,99 @@
 <!-- <div class="container pt-2" *ngIf="items.length>0; else elseBlock"> -->
-<div class="container pt-2">
-  <ng-template #content let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title">{{title_modal}}</h4>
-      <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
-    </div>
-    <div class="modal-body">
-
-      <ul *ngFor="let item of list_content; let i = index ">
-        <li>{{item}}</li>
-      </ul>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
-    </div>
-  </ng-template>
-  <form>
-    <div class="mb-3 row">
-      <label for="table-complete-search" class="col-xs-3 col-sm-auto col-form-label"><b>Search by name or DIIO:</b></label>
-      <div class="col-xs-3 col-sm-auto">
-        <input
-          id="table-complete-search"
-          type="text"
-          class="form-control"
-          name="searchTerm"
-          [(ngModel)]="service.searchTerm"
-        />
+    <div class="container pt-2">
+        <ng-template #content let-modal>
+          <div class="modal-header">
+            <h4 class="modal-title">{{title_modal}}</h4>
+            <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+          </div>
+          <div class="modal-body">
+      
+            <ul *ngFor="let item of list_content; let i = index ">
+              <li>{{item}}</li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+          </div>
+        </ng-template>
+        <form>
+          <div class="mb-3 row">
+            <label for="table-complete-search" class="col-xs-3 col-sm-auto col-form-label"><b>Search by name or DIIO:</b></label>
+            <div class="col-xs-3 col-sm-auto">
+              <input
+                id="table-complete-search"
+                type="text"
+                class="form-control"
+                name="searchTerm"
+                [(ngModel)]="service.searchTerm"
+              />
+            </div>
+            <!-- <div class="col-xs-3 col-sm-auto">N° bovines: {{(items$| async)?.length}} </div> -->
+            <span class="col col-form-label" *ngIf="service.loading$ | async">Loading...   <div class="spinner-border text-success" role="status">
+              <span class="sr-only">Loading...</span>
+            </div></span>
+          </div>
+      
+          <table class="table table-striped" >
+            <thead style="position: sticky">
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Image</th>
+                <th scope="col" (sort)="onSort($event)" sortable="name">Name</th>
+                <th scope="col" >DIIO</th>
+                <th scope="col" >Date Placement</th>
+                <th scope="col" >Date Birth</th>
+                <th scope="col" >Mother</th>
+                <th scope="col" >Type</th>
+                <th scope="col" >Age<span class="badge" style="color: black;"></span></th>
+                <th scope="col" >Verified SAG</th>
+                <th scope="col" >Actions</th>
+                <!-- <th scope="col" >Color</th>
+                <th scope="col" >State</th>
+                <th scope="col" >Date Sale</th> -->
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let country of items$ | async; let i = index " (dblclick)="editBovine(country.id)">
+                <th scope="row">{{i+1}}</th>
+                <td>
+                  <img
+                    width="50px"
+                    height="50px"
+                    [src]="'http://localhost:8006/images/bovines/'+country.id"
+                    
+                  />
+                </td>
+                <td>
+                  <ngb-highlight [result]="country.name" [term]="service.searchTerm"></ngb-highlight>
+                </td>
+                <td><ngb-highlight [result]="country.diio" [term]="service.searchTerm"></ngb-highlight></td>
+                <td><ngb-highlight [result]=" country.datePlacement!=null?(country.datePlacement | date:'dd/MM/yyyy'):'No aplica'" [term]="service.searchTerm"></ngb-highlight></td>
+                <td><ngb-highlight [result]=" country.dateBirth | date:'dd/MM/yyyy'" [term]="service.searchTerm"></ngb-highlight></td>
+                <td><ngb-highlight style="cursor: pointer;" [result]="country.mother" [term]="service.searchTerm"></ngb-highlight></td>
+                <td><ngb-highlight [result]="country.type" [term]="service.searchTerm"></ngb-highlight></td>
+                <td>{{country.age}}</td>
+                <td>{{country.verifiedSag}}</td>
+                <td><i title="See identifiers" style="cursor: pointer;" (click)="openModalDialogCustomClass(content,country.id)" class="fa-solid fa-list-ol p-2"></i>
+                    <i *ngIf="country.type=='Vaca'" title="See children" style="cursor: pointer;" (click)="openModalDialogCustomClass2(content,country.id)" class="fa-solid fa-clipboard-list p-2"></i>
+                    <i title="Delete (only on die)" style="cursor: pointer;" class="fa-solid fa-book-skull p-2"></i>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+      
+          <div class="d-flex justify-content-between p-2">
+            <ngb-pagination [collectionSize]="(total$ | async)!" [(page)]="service.page" [pageSize]="service.pageSize">
+                  </ngb-pagination>
+            Showing {{(items$|async)?.length}} of a total of {{(total$ | async)!}} bovines
+            <select class="form-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
+              <option [ngValue]="5">5 items per page</option>
+              <option [ngValue]="10">10 items per page</option>
+              <option [ngValue]="15">15 items per page</option>
+              <!-- <option [ngValue]="20">20 items por página</option> -->
+            </select>
+          </div>
+        </form>
       </div>
-      <!-- <div class="col-xs-3 col-sm-auto">N° bovines: {{(items$| async)?.length}} </div> -->
-      <span class="col col-form-label" *ngIf="service.loading$ | async">Loading...   <div class="spinner-border text-success" role="status">
-        <span class="sr-only">Loading...</span>
-      </div></span>
-    </div>
-
-    <table class="table table-striped" >
-      <thead style="position: sticky">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Image</th>
-          <th scope="col" (sort)="onSort($event)" sortable="name">Name</th>
-          <th scope="col" >DIIO</th>
-          <th scope="col" >Date Placement</th>
-          <th scope="col" >Date Birth</th>
-          <th scope="col" >Mother</th>
-          <th scope="col" >Type</th>
-          <th scope="col" >Age<span class="badge" style="color: black;">BASIC</span></th>
-          <th scope="col" >Actions</th>
-          <!-- <th scope="col" >Color</th>
-          <th scope="col" >State</th>
-          <th scope="col" >Date Sale</th> -->
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let country of items$ | async; let i = index " (dblclick)="editBovine(country.id)">
-          <th scope="row">{{i+1}}</th>
-          <td>
-            <img
-              width="50px"
-              height="50px"
-              [src]="'http://localhost:8006/images/bovines/'+country.id+'?dummy='+i"
-              
-            />
-          </td>
-          <td>
-            <ngb-highlight [result]="country.name" [term]="service.searchTerm"></ngb-highlight>
-          </td>
-          <td><ngb-highlight [result]="country.diio" [term]="service.searchTerm"></ngb-highlight></td>
-          <td><ngb-highlight [result]=" country.datePlacement!=null?(country.datePlacement | date:'dd/MM/yyyy'):'No aplica'" [term]="service.searchTerm"></ngb-highlight></td>
-          <td><ngb-highlight [result]=" country.dateBirth | date:'dd/MM/yyyy'" [term]="service.searchTerm"></ngb-highlight></td>
-          <td><ngb-highlight style="cursor: pointer;" [result]="country.mother" [term]="service.searchTerm"></ngb-highlight></td>
-          <td><ngb-highlight [result]="country.type" [term]="service.searchTerm"></ngb-highlight></td>
-          <td>{{country.age}}</td>
-          <td><i title="See identifiers" style="cursor: pointer;" (click)="openModalDialogCustomClass(content,country.id)" class="fa-solid fa-list-ol p-2"></i>
-              <i *ngIf="country.type=='Vaca'" title="See children" style="cursor: pointer;" (click)="openModalDialogCustomClass2(content,country.id)" class="fa-solid fa-clipboard-list p-2"></i>
-              <i title="Delete (only on die)" style="cursor: pointer;" class="fa-solid fa-book-skull p-2"></i>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
-    <div class="d-flex justify-content-between p-2">
-      <ngb-pagination [collectionSize]="(total$ | async)!" [(page)]="service.page" [pageSize]="service.pageSize">
-			</ngb-pagination>
-      Showing {{service.pageSize}} bovines of a total of {{(items$| async)?.length}}
-      <select class="form-select" style="width: auto" name="pageSize" [(ngModel)]="service.pageSize">
-        <option [ngValue]="5">5 items per page</option>
-        <option [ngValue]="10">10 items per page</option>
-        <option [ngValue]="15">15 items per page</option>
-        <!-- <option [ngValue]="20">20 items por página</option> -->
-      </select>
-    </div>
-  </form>
-</div>
-<!-- <ng-template #elseBlock>
-  Loading...
-</ng-template> -->
+      <!-- <ng-template #elseBlock>
+        Loading...
+      </ng-template> -->
