--- a/plataformaGestionPredial/src/app/identifiers/identifiers.component.html
+++ b/plataformaGestionPredial/src/app/identifiers/identifiers.component.html
@@ -1,1 +1,1 @@
-<app-forms [configurations]="configurations" [callBackFunction]="registerIdentifier" [fields]="fields"></app-forms>
+<app-forms (cambioSelect)="desplegarImagenBovino($event)" [configurations]="configurations" [callBackFunction]="registerIdentifier" [fields]="fields"></app-forms>
