--- a/plataformaGestionPredial/src/app/list/list.component.html
+++ b/plataformaGestionPredial/src/app/list/list.component.html
@@ -75,7 +75,7 @@
                 <td>{{country.verifiedSag}}</td>
                 <td><i title="See identifiers" style="cursor: pointer;" (click)="openModalDialogCustomClass(content,country.id)" class="fa-solid fa-list-ol p-2"></i>
                     <i *ngIf="country.type=='Vaca'" title="See children" style="cursor: pointer;" (click)="openModalDialogCustomClass2(content,country.id)" class="fa-solid fa-clipboard-list p-2"></i>
-                    <i title="Delete (only on die)" style="cursor: pointer;" class="fa-solid fa-book-skull p-2"></i>
+                    <i title="Delete (only on case of die)" style="cursor: pointer;" class="fa-solid fa-book-skull p-2"></i>
                 </td>
               </tr>
             </tbody>
